# DearPyHost

./: .gitignore  .pre-commit-config.yaml  README.md  dev.py  pyproject.toml
src/: keyboard.py  main.py  menubar.py  modal_window.py  myserial.py  node_editor.py  sidebar.py
src/node/: __init__.py  codec.py  fft.py  regex.py  serial_node.py  terminal.py  wave_display.py
utils/: get_version.py
