[project]
name = "DearPyHost"
version = "1.0.0"
description = "基于DearPyGui的Python上位机"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dearpygui>=2.3.1",
    "numpy>=2.4.4",
    "pyserial>=3.5",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
    "ty>=0.0.34",
    "typer>=0.25.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
